gitops/ocp-dist-tracing-gen/ns-opentelemetry-gen-hotrod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry-gen-hotrod
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
