gitops/ocp-dist-tracing-gen/ns-opentelemetry-gen-k6.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry-gen-k6
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
