gitops/ocp-dist-tracing-gen/ns-tracing-app-hotrod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tracing-app-hotrod
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
