gitops/ocp-dist-tracing-gen/svc-hotrod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hotrod
  namespace: tracing-app-hotrod
spec:
  selector:
    app.kubernetes.io/name: hotrod
  ports:
  - name: frontend
    port: 8080
    targetPort: frontend
